--- a/compose.yaml
+++ b/compose.yaml
@@ -8,17 +8,22 @@
 # database or a cache. For examples, see the Awesome Compose repository:
 # https://github.com/docker/awesome-compose
 services:
-  server:
+  app:
     build:
       context: .
+    image: host
+    ports:
+      - '3000:3000'
     environment:
       NODE_ENV: development
-    ports:
-      - 3000:3000
-    volumes:
-      - .:/usr/src/app
+      NEXT_MONGO_CONNECTION_URL: mongodb://mongo:27017/nextjs-mastery
+    depends_on:
+      - mongo
 
-volumes: {}
+  mongo:
+    image: mongo
+    ports:
+      - "27017:27017"
 # The commented out section below is an example of how to define a PostgreSQL
 # database that your application can use. `depends_on` tells Docker Compose to
 # start the database before your application. The `db-data` volume persists the
