--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/core": "^0.39.1",
     "@auth/nextjs": "^0.0.0-380f8d56",
+    "bcryptjs": "^3.0.2",
     "mongoose": "^8.15.0",
     "next": "15.3.2",
     "next-auth": "^4.24.11",
